--- a/VS_projects/Cameras/Cameras/Cameras.vbproj
+++ b/VS_projects/Cameras/Cameras/Cameras.vbproj
@@ -79,7 +79,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\Json80r3\Bin\Net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>.\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
